--- a/Webscrapping Oto dom.ipynb
+++ b/Webscrapping Oto dom.ipynb
@@ -2,19 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe kernel failed to start due to an error with the Win32api module. Consider (re) installing this module.\n",
-      "\u001b[1;31mClick <a href='https://aka.ms/kernelFailuresWin32Api'>here</a> for more info."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from selenium import webdriver\n",
     "\n",
@@ -30,19 +20,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe kernel failed to start due to an error with the Win32api module. Consider (re) installing this module.\n",
-      "\u001b[1;31mClick <a href='https://aka.ms/kernelFailuresWin32Api'>here</a> for more info."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from selenium.webdriver.support.ui import WebDriverWait\n",
     "from selenium.webdriver.support import expected_conditions as EC\n",
@@ -53,19 +33,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 163,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe kernel failed to start due to an error with the Win32api module. Consider (re) installing this module.\n",
-      "\u001b[1;31mClick <a href='https://aka.ms/kernelFailuresWin32Api'>here</a> for more info."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "driver = webdriver.Chrome(service=Service(ChromeDriverManager().install()))\n",
     "driver.get('https://www.otodom.pl/')\n"
@@ -73,122 +43,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 164,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe kernel failed to start due to an error with the Win32api module. Consider (re) installing this module.\n",
-      "\u001b[1;31mClick <a href='https://aka.ms/kernelFailuresWin32Api'>here</a> for more info."
-     ]
-    }
-   ],
-   "source": [
-    "res = requests.get('https://www.otodom.pl/')\n",
-    "soup = BeautifulSoup(res.content)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe kernel failed to start due to an error with the Win32api module. Consider (re) installing this module.\n",
-      "\u001b[1;31mClick <a href='https://aka.ms/kernelFailuresWin32Api'>here</a> for more info."
-     ]
-    }
-   ],
-   "source": [
-    "menu= soup.find_all('div')\n",
-    "\n",
-    "menu"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe kernel failed to start due to an error with the Win32api module. Consider (re) installing this module.\n",
-      "\u001b[1;31mClick <a href='https://aka.ms/kernelFailuresWin32Api'>here</a> for more info."
-     ]
-    }
-   ],
-   "source": [
-    "# Define the type of the iterated value\n",
-    "menu:element.Tag\n",
-    "\n",
-    "for h1 in menu:\n",
-    "    print(menu.get_text())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe kernel failed to start due to an error with the Win32api module. Consider (re) installing this module.\n",
-      "\u001b[1;31mClick <a href='https://aka.ms/kernelFailuresWin32Api'>here</a> for more info."
-     ]
-    }
-   ],
-   "source": [
-    "# Get only the wrapper of side-menu\n",
-    "sidemenu = soup.find('div', {'class': 'menu-is-open'})\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe kernel failed to start due to an error with the Win32api module. Consider (re) installing this module.\n",
-      "\u001b[1;31mClick <a href='https://aka.ms/kernelFailuresWin32Api'>here</a> for more info."
-     ]
-    }
-   ],
-   "source": [
-    "print(sidemenu)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe kernel failed to start due to an error with the Win32api module. Consider (re) installing this module.\n",
-      "\u001b[1;31mClick <a href='https://aka.ms/kernelFailuresWin32Api'>here</a> for more info."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Close Cookies banner\n",
     "cookie_banner = driver.find_element(By.ID,'onetrust-accept-btn-handler')\n",
@@ -197,19 +54,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 165,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe kernel failed to start due to an error with the Win32api module. Consider (re) installing this module.\n",
-      "\u001b[1;31mClick <a href='https://aka.ms/kernelFailuresWin32Api'>here</a> for more info."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "estate_search_input = driver.find_element(By.XPATH,\"//div[@class='react-select__indicators css-1wy0on6']\")\n",
     "estate_search_input.click()"
@@ -217,19 +64,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 166,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe kernel failed to start due to an error with the Win32api module. Consider (re) installing this module.\n",
-      "\u001b[1;31mClick <a href='https://aka.ms/kernelFailuresWin32Api'>here</a> for more info."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "estate_type = driver.find_element(By.ID,'react-select-estate-option-2')   ## change 0-5 to select diff options\n",
     "#estate_type = driver.find_element(By.XPATH,\"//div[@id='react-select-estate-option-0']\")  \n",
@@ -238,92 +75,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 167,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe kernel failed to start due to an error with the Win32api module. Consider (re) installing this module.\n",
-      "\u001b[1;31mClick <a href='https://aka.ms/kernelFailuresWin32Api'>here</a> for more info."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "estate_search_input2 = driver.find_element(By.XPATH,\"//div[@class='css-1me1fll e15vekw10']\")\n",
+    "estate_search_input2 = driver.find_element(By.XPATH,\"//div[@class='css-1ryidgr e1fy8c750']\")\n",
+    "estate_search_input2.click()\n",
+    "estate_search_input2 = driver.find_element(By.XPATH,\"//div[@class='css-1ryidgr e1fy8c750']\")\n",
     "estate_search_input2.click()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "estate_type = driver.find_element(By.ID,'react-select-transaction-option-0')   ## change 0-5 to select diff options\n",
+    "#estate_type = driver.find_element(By.XPATH,\"//div[@id='react-select-estate-option-0']\")  \n",
+    "estate_type.click()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "estate_search_input3 = driver.find_element(By.XPATH,\"//div[@class='css-evbfge e1xubazb2']\")\n",
+    "estate_search_input3.click()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "estate_search_input3 = driver.find_element(By.XPATH,\"//input[@class='ehxn9ut1 css-eij8d2 eiqkskw0']\")\n",
+    "estate_search_input3.click()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-156-ceec06533767>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31mThe kernel failed to start due to an error with the Win32api module. Consider (re) installing this module.\n",
-      "\u001b[1;31mClick <a href='https://aka.ms/kernelFailuresWin32Api'>here</a> for more info."
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-156-ceec06533767>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    <input autocomplete=\"off\" type=\"text\" aria-label=\"Wpisz nazwę lokalizacji\" placeholder=\"Wpisz nazwę lokalizacji\" data-cy=\"location-picker-input\" id=\"location-picker-input\" class=\"ehxn9ut1 css-eij8d2 eiqkskw0\">\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "<div class=\"react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer\" aria-hidden=\"true\"><svg height=\"20\" width=\"20\" viewBox=\"0 0 20 20\" aria-hidden=\"true\" focusable=\"false\" class=\"css-8mmkcg\"><path d=\"M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z\"></path></svg></div>\n",
-    "\n",
-    "<div class=\" css-b62m3t-container\"><span id=\"react-select-transaction-live-region\" class=\"css-7pg0cj-a11yText\"></span><span aria-live=\"polite\" aria-atomic=\"false\" aria-relevant=\"additions text\" class=\"css-7pg0cj-a11yText\"></span><div class=\"react-select__control css-1nxb8fi-control\"><div class=\"react-select__value-container react-select__value-container--has-value css-1d8n9bt\"><div class=\"react-select__single-value css-qc6sy-singleValue\">Na sprzedaż</div><input id=\"transaction\" tabindex=\"0\" inputmode=\"none\" aria-autocomplete=\"list\" aria-expanded=\"false\" aria-haspopup=\"true\" aria-controls=\"react-select-transaction-listbox\" aria-owns=\"react-select-transaction-listbox\" aria-invalid=\"false\" role=\"combobox\" aria-readonly=\"true\" class=\"css-1hac4vs-dummyInput\" value=\"\"></div><div class=\"react-select__indicators css-1wy0on6\"><div class=\"react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer\" aria-hidden=\"true\"><svg height=\"20\" width=\"20\" viewBox=\"0 0 20 20\" aria-hidden=\"true\" focusable=\"false\" class=\"css-8mmkcg\"><path d=\"M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z\"></path></svg></div></div></div><input name=\"transaction\" type=\"hidden\" value=\"SELL\"></div>"
+    "<input autocomplete=\"off\" type=\"text\" aria-label=\"Wpisz nazwę lokalizacji\" placeholder=\"Wpisz nazwę lokalizacji\" data-cy=\"location-picker-input\" id=\"location-picker-input\" class=\"ehxn9ut1 css-eij8d2 eiqkskw0\">"
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 171,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "<div class=\"css-1me1fll e15vekw10\"><div class=\"css-1ryidgr e1fy8c750\" data-cy=\"search-form--field--transaction\"><div class=\" css-b62m3t-container\"><span id=\"react-select-transaction-live-region\" class=\"css-7pg0cj-a11yText\"></span><span aria-live=\"polite\" aria-atomic=\"false\" aria-relevant=\"additions text\" class=\"css-7pg0cj-a11yText\"></span><div class=\"react-select__control css-1nxb8fi-control\"><div class=\"react-select__value-container react-select__value-container--has-value css-1d8n9bt\"><div class=\"react-select__single-value css-qc6sy-singleValue\">Na sprzedaż</div><input id=\"transaction\" tabindex=\"0\" inputmode=\"none\" aria-autocomplete=\"list\" aria-expanded=\"false\" aria-haspopup=\"true\" aria-controls=\"react-select-transaction-listbox\" aria-owns=\"react-select-transaction-listbox\" aria-invalid=\"false\" role=\"combobox\" aria-readonly=\"true\" class=\"css-1hac4vs-dummyInput\" value=\"\"></div><div class=\"react-select__indicators css-1wy0on6\"><div class=\"react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer\" aria-hidden=\"true\"><svg height=\"20\" width=\"20\" viewBox=\"0 0 20 20\" aria-hidden=\"true\" focusable=\"false\" class=\"css-8mmkcg\"><path d=\"M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z\"></path></svg></div></div></div><input name=\"transaction\" type=\"hidden\" value=\"SELL\"></div></div></div>"
+    "estate_search_input3.send_keys('Warszawa')\n",
+    "estate_search_input3.send_keys(Keys.ENTER)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe kernel failed to start due to an error with the Win32api module. Consider (re) installing this module.\n",
-      "\u001b[1;31mClick <a href='https://aka.ms/kernelFailuresWin32Api'>here</a> for more info."
-     ]
-    }
-   ],
-   "source": [
-    "# Get all links and save them to a variable\n",
-    "anchors = sidemenu.find_all('menu-is-open')\n",
-    "links = []\n",
-    "link: element.Tag\n",
-    "for link in anchors:\n",
-    "    links.append(link.get('href'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe kernel failed to start due to an error with the Win32api module. Consider (re) installing this module.\n",
-      "\u001b[1;31mClick <a href='https://aka.ms/kernelFailuresWin32Api'>here</a> for more info."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "estate_purpose_field =driver.find_element(By.XPATH,\"//input[@name='investmentEstateType']\")\n",
     "#ActionChains(driver).move_to_element(estate_purpose_field).perform()\n",
@@ -334,17 +159,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe kernel failed to start due to an error with the Win32api module. Consider (re) installing this module.\n",
-      "\u001b[1;31mClick <a href='https://aka.ms/kernelFailuresWin32Api'>here</a> for more info."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "filter_3_star = driver.find_element(By.XPATH,\"//div[@class='react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer']\")\n",
     "\n",
@@ -357,17 +172,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe kernel failed to start due to an error with the Win32api module. Consider (re) installing this module.\n",
-      "\u001b[1;31mClick <a href='https://aka.ms/kernelFailuresWin32Api'>here</a> for more info."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "<input name=\"investmentEstateType\" type=\"hidden\" value=\"\">\n",
     "<input name=\"investmentEstateType\" type=\"hidden\" value=\"\">\n",
@@ -383,17 +188,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe kernel failed to start due to an error with the Win32api module. Consider (re) installing this module.\n",
-      "\u001b[1;31mClick <a href='https://aka.ms/kernelFailuresWin32Api'>here</a> for more info."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pip install shub --user"
    ]
@@ -402,17 +197,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe kernel failed to start due to an error with the Win32api module. Consider (re) installing this module.\n",
-      "\u001b[1;31mClick <a href='https://aka.ms/kernelFailuresWin32Api'>here</a> for more info."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   }
  ],
