--- a/Webscrapping Oto dom.ipynb
+++ b/Webscrapping Oto dom.ipynb
@@ -33,17 +33,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
-    "driver = webdriver.Chrome(service=Service(ChromeDriverManager().install()))\n",
+    "driver = webdriver.Chrome(service=Service(ChromeDriverManager().install())) #get to the website\n",
     "driver.get('https://www.otodom.pl/')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,32 +54,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
-    "estate_search_input = driver.find_element(By.XPATH,\"//div[@class='react-select__indicators css-1wy0on6']\")\n",
+    "estate_search_input = driver.find_element(By.XPATH,\"//div[@class='react-select__indicators css-1wy0on6']\") #Open list to select Estate type\n",
     "estate_search_input.click()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
-    "estate_type = driver.find_element(By.ID,'react-select-estate-option-2')   ## change 0-5 to select diff options\n",
+    "estate_type = driver.find_element(By.ID,'react-select-estate-option-2')   ## change 0-5 to select diff options for Estate\n",
     "#estate_type = driver.find_element(By.XPATH,\"//div[@id='react-select-estate-option-0']\")  \n",
     "estate_type.click()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
-    "estate_search_input2 = driver.find_element(By.XPATH,\"//div[@class='css-1ryidgr e1fy8c750']\")\n",
+    "estate_search_input2 = driver.find_element(By.XPATH,\"//div[@class='css-1ryidgr e1fy8c750']\") #Open list to choose purpose\n",
     "estate_search_input2.click()\n",
     "estate_search_input2 = driver.find_element(By.XPATH,\"//div[@class='css-1ryidgr e1fy8c750']\")\n",
     "estate_search_input2.click()"
@@ -87,61 +87,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
-    "estate_type = driver.find_element(By.ID,'react-select-transaction-option-0')   ## change 0-5 to select diff options\n",
+    "estate_type = driver.find_element(By.ID,'react-select-transaction-option-0')   ## change 0-1 to choose rent/sale\n",
     "#estate_type = driver.find_element(By.XPATH,\"//div[@id='react-select-estate-option-0']\")  \n",
     "estate_type.click()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
-    "estate_search_input3 = driver.find_element(By.XPATH,\"//div[@class='css-evbfge e1xubazb2']\")\n",
+    "estate_search_input3 = driver.find_element(By.XPATH,\"//div[@class='css-evbfge e1xubazb2']\") #Open list to pick the region/City\n",
     "estate_search_input3.click()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
-    "estate_search_input3 = driver.find_element(By.XPATH,\"//input[@class='ehxn9ut1 css-eij8d2 eiqkskw0']\")\n",
+    "estate_search_input3 = driver.find_element(By.XPATH,\"//input[@class='ehxn9ut1 css-eij8d2 eiqkskw0']\") # to move the cursor to the search bar\n",
     "estate_search_input3.click()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-156-ceec06533767>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-156-ceec06533767>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    <input autocomplete=\"off\" type=\"text\" aria-label=\"Wpisz nazwę lokalizacji\" placeholder=\"Wpisz nazwę lokalizacji\" data-cy=\"location-picker-input\" id=\"location-picker-input\" class=\"ehxn9ut1 css-eij8d2 eiqkskw0\">\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "<input autocomplete=\"off\" type=\"text\" aria-label=\"Wpisz nazwę lokalizacji\" placeholder=\"Wpisz nazwę lokalizacji\" data-cy=\"location-picker-input\" id=\"location-picker-input\" class=\"ehxn9ut1 css-eij8d2 eiqkskw0\">"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
-    "estate_search_input3.send_keys('Warszawa')\n",
-    "estate_search_input3.send_keys(Keys.ENTER)"
+    "estate_search_input3.send_keys('Warszawa') # to enter the city \n",
+    "estate_search_input3.send_keys(Keys.ENTER) #press enter "
    ]
   },
   {
@@ -167,38 +149,6 @@
     "\n",
     "filter_3_star.click()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "<input name=\"investmentEstateType\" type=\"hidden\" value=\"\">\n",
-    "<input name=\"investmentEstateType\" type=\"hidden\" value=\"\">\n",
-    "<div class=\"react-select__indicators css-1wy0on6\"><div class=\"react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer\" aria-hidden=\"true\"><svg height=\"20\" width=\"20\" viewBox=\"0 0 20 20\" aria-hidden=\"true\" focusable=\"false\" class=\"css-8mmkcg\"><path d=\"M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z\"></path></svg></div></div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pip install shub --user"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
